--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,15 @@ dependencies:
   equatable: ^2.0.0
   expandable_bottom_sheet: ^1.0.0+2
   flutter_bloc: ^7.0.0
+  flutter_colorpicker: ^0.4.0
   flutter_test_ui: ^1.0.0
   fullscreen: ^1.0.3
+  http: ^0.13.1
   image_gallery_saver: ^1.6.9
   mockito: ^5.0.3
   path_provider: ^2.0.1
   permission_handler: ^6.1.3
+  syncfusion_flutter_sliders: ^19.1.56-beta
 
 dev_dependencies:
   flutter_test:
