--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text_pk: ^3.0.0
   cupertino_icons: ^1.0.2
   dartz: 0.10.0-nullsafety.1
   equatable: ^2.0.0
