--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   http: ^0.13.1
   image_gallery_saver: ^1.6.9
   mockito: ^5.0.3
+  path: ^1.8.0
   path_provider: ^2.0.1
   permission_handler: ^6.1.3
+  sqflite: ^2.0.0+3
   syncfusion_flutter_sliders: ^19.1.56-beta
 
 dev_dependencies:
