--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_colorpicker: ^0.4.0
   flutter_test_ui: ^1.0.0
   fullscreen: ^1.0.3
+  font_awesome_flutter: ^9.0.0
   http: ^0.13.1
   image_gallery_saver: ^1.6.9
   mockito: ^5.0.3
