--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.animated_drawings_application">
    <application
-        android:label="animated_drawings_application"
+        android:label="QuickSketch"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
